# stream-elearning

./: Cargo.toml  build.rs
proto/: stream.proto
src/: lib.rs  manager.rs  stream.rs
src/desktop/: manager.rs  mod.rs  stream.rs
src/web/: stream.rs  utils.rs
