[package]
name = "stream"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
prost = "0.13.4"
prost-types = "0.13.4"
tonic = { version = "0.12.3", default-features = false, features = ["codegen", "transport", "prost"]}
tokio = { version = "1.43.0", features = ["macros"] }

[dependencies.tonic-web-wasm-client]
version = "0.6.0"
optional = true

[features]
default = ["desktop"]
desktop = []
web = ["tonic-web-wasm-client"]

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"] }
