[package]
name = "stream"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
prost = "0.13.4"
prost-types = "0.13.4"
tonic = { version = "0.12.3", optional = true }
tokio = { version = "1.43.0", features = ["macros"], optional = true} 

[features]
default = ["web"]
desktop = ["tonic", "tokio", "tonic-build"]
web = ["prost-build"]

[build-dependencies]
tonic-build = { version = "0.12.3", features = ["prost"], optional = true }
prost-build = { version = "0.13.4", optional = true }